# ttl

./: .gitignore  .travis.yml  LICENSE  README.md  ttl.sln
doc/: LINQ.md
ttl/: AnyTest.cpp  BinaryReaderWriterTest.cpp  CMakeLists.txt  CRCTest.cpp  ConfigTest.cpp  ContractTest.cpp  DeflaterTest.cpp  DynLibTest.cpp  FunctionTest.cpp  InflaterTest.cpp  LINQTest.cpp  LoggerTest.cpp  MMAPTest.cpp  ModuleTest.cpp  OptionalTest.cpp  PredicateTest.cpp  ProcessTest.cpp  PromiseTest.cpp  RCUTest.cpp  ReflectionTest.cpp  SignalTest.cpp  StringTest.cpp  TimerTest.cpp  TraitsTest.cpp  TypeTest.cpp  VersionTest.cpp  ZipReaderTest.cpp  ZipStreamTest.cpp  makefile  test  ttl.vcxproj  ttl.vcxproj.filters  version.h.in
ttl/include/: config.h  dynlib.h  logger.h  noncopyable.h  process.h  string_util.h  timer.h
ttl/include/ttl/: any.h  binary_reader.h  binary_writer.h  config.h  contract.h  crc.h  cxx11_helpers.h  dynlib.h  function.h  linq.h  logger.h  mmap.h  module.h  noncopyable.h  noop_mutex.h  optional.h  predicate.h  process.h  promise.h  rcu.h  signal.h  string_util.h  timer.h  to_string.h  traits.h  type.h
ttl/include/ttl/io/: deflate_stream.h  deflater.h  inflate_stream.h  inflater.h  zip_entry.h  zip_internals.h  zip_reader.h  zip_stream.h
ttl/include/ttl/reflect/: base_info.h  builder.h  class_info.h  constructor_info.h  constructor_parameter_info.h  field_info.h  helper.h  method_info.h  parameter_info.h  registration.h
ttl/test_data/: mmap_test.txt
